--- a/src/main/resources/templates/AnalyserHome.html
+++ b/src/main/resources/templates/AnalyserHome.html
@@ -7,6 +7,7 @@
     <resources mapping="/resources/**" location="/home/hadoop/IdeaProjects/meteo-web-app/src/main/resources" />
     <title>Weather Analyzer Home</title>
 
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdn.datatables.net/1.10.19/css/jquery.dataTables.min.css">
     <link rel="stylesheet" type="text/css" href="/resources" />
@@ -77,7 +78,43 @@
         Check the Documentation page for Data References
     </h6>
     <br>
-<form style="width:20;float:right;margin-right: 0px;margin-top: 0px" action="#"
+    <div class="card-deck mb-3 text-center">
+        <div class="card mb-4 box-shadow">
+            <div class="card-header">
+                <h4 class="my-0 font-weight-normal">Free</h4>
+            </div>
+            <div class="card-body d-flex flex-column">
+                <h1 class="card-title pricing-card-title">$0 <small class="text-muted">/ mo</small></h1>
+                <ul class="list-unstyled mt-3 mb-4">
+                    <li>10 users included</li>
+                    <li>2 GB of storage</li>
+                    <li>Email support</li>
+                    <li>Help center access</li>
+                    <li>Help center access</li>
+                    <li>Help center access</li>
+                    <li>Help center access</li>
+                </ul>
+                <button type="button" class="btn btn-lg btn-block btn-outline-primary mt-auto">Sign up for free</button>
+            </div>
+        </div>
+        <div class="card mb-4 box-shadow">
+            <div class="card-header">
+                <h4 class="my-0 font-weight-normal">Pro</h4>
+            </div>
+            <div class="card-body d-flex flex-column">
+                <h1 class="card-title pricing-card-title">$15
+                    <small class="text-muted">/ mo</small></h1>
+                <ul class="list-unstyled mt-3 mb-4">
+                    <li>Free users Access</li>
+                    <li>More Then 300 year Data</li>
+                    <li></li>
+                    <li>Help center access</li>
+                </ul>
+            </div>
+        </div>
+    </div>
+
+    <form style="width:20;float:right;margin-right: 0px;margin-top: 0px" action="#"
       th:action="@{/search}" th:object="${search}" class="form-inline">
     <div class="form-group mx-sm-3 mb-2">
         <label for="search" class="sr-only">Search</label>
@@ -87,6 +124,7 @@
 </form>
 <br>
 </div>
+
 
 <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
